<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">Full Email</string>
    <string name="app_copyright">Copyright &#x24B8; 2018&#x2013;2021 by M. Bokhorst</string>
    <string name="app_search">Full Email search</string>
    <string name="app_answer" translatable="false">Full Email template</string>
    <string name="app_changelog">Changelog</string>
    <string name="app_welcome">Full Email is an open source email app focused on privacy and security. For this reason some features might work differently from what you are used to.</string>
    <string name="app_limitations">For example, messages are reformatted by default to remove unsafe elements and to improve readability, and opening links needs to be confirmed for safety. Both can be disabled if desired.</string>
    <string name="app_eula" translatable="false">THIS SOFTWARE IS PROVIDED BY THE AUTHOR \'\'AS IS\'\' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.</string>
    <string name="app_crash">Full Email is not supported on this device because bugs in Android cause crashes</string>
    <string name="app_exit">Go \'back\' again to exit</string>
    <string name="app_cake">Insufficient storage space left</string>
    <string name="app_updated">Last update: %1$s</string>
    <string name="channel_service">Receive</string>
    <string name="channel_send">Send</string>
    <string name="channel_notification">Email</string>
    <string name="channel_progress">Progress</string>
    <string name="channel_update">Updates</string>
    <string name="channel_warning">Warnings</string>
    <string name="channel_error">Errors</string>
    <string name="channel_alert">Server alerts</string>
    <string name="channel_group_contacts">Contacts</string>
    <string name="channel_service_description">Synchronizing and monitoring of accounts</string>
    <string name="channel_send_description">Sending of messages</string>
    <string name="channel_notification_description">New message notifications</string>
    <string name="channel_progress_description">Progress notifications of longer running activities</string>
    <string name="page_folders">Folders</string>
    <string name="page_compose">Compose</string>
    <string name="tile_synchronize">Synchronize</string>
    <string name="tile_unseen">New messages</string>
    <string name="shortcut_refresh">Refresh</string>
    <string name="shortcut_compose">Compose</string>
    <string name="title_unseen">Mark unread</string>
    <string name="title_hide">Hide</string>
    <string name="title_flag_color">Colored star &#x2026;</string>
    <string name="title_set_importance">Set importance</string>
    <string name="title_importance_low">Low</string>
    <string name="title_importance_normal">Normal</string>
    <string name="title_importance_high">High</string>
    <string name="title_search_in_text">Search in text &#x2026;</string>
    <string name="title_edit_notes">Edit local notes</string>
    <string name="title_create_rule">Create rule &#x2026;</string>
    <string name="title_share">Share</string>
    <string name="title_event">Add to calendar</string>
    <string name="title_pin">Add shortcut</string>
    <string name="title_print">Print</string>
    <string name="title_show_headers">Show headers</string>
    <string name="title_share_as_html">Share as HTML</string>
    <string name="title_raw_save">Save raw message</string>
    <string name="title_raw_send">Send as attachment</string>
    <string name="title_raw_send_message">Message</string>
    <string name="title_raw_send_thread">Conversation</string>
    <string name="title_manage_keywords">Manage keywords</string>
    <string name="title_configure_buttons">Configure buttons &#x2026;</string>
    <string name="title_copy_to">Copy to &#x2026;</string>
    <string name="title_move_to">Move to &#x2026;</string>
    <string name="title_delete_permanently">Delete permanently</string>
    <string name="title_snooze">Snooze &#x2026;</string>
    <string name="title_translate">Translate</string>
    <string name="title_resync">Resync</string>
    <string name="title_log">Log</string>
    <string name="cricket_chock_valley">Polonium orlando carr phytoplankton data? Sizzle perihelion protean doyle…</string>
    <string name="gorton_eradicable_legate_sphagnum">Recipe prove sleety abutted ellen brisbane highlight traceable! Doorkeep winter</string>
    <string name="bobbing_kipling_diverge">Polyglot bergland kitakyushu graywacke moorish tortoiseshell kilovolt! Needy prophecy</string>
    <string name="feasible_durham_quadrupole_behalf">Newborn communicate whence buckshot made censorial insectivore! Religiosity desk volunteer</string>
    <string name="nucleoli_transship_camden">Shaffer gentleman heathkit parrish hardwood… Waistcoat catechism</string>
    <string name="dooley_vulture_tirade_goren">Swift piggy soluble</string>
    <string name="texas_occult_rabin">Footwear kelly equate tavern typhoid indivisible squashberry? Quarrel oedipal</string>
    <string name="riga_slept_elaborate_lola">Miscible trenton</string>
    <string name="mutandis_incumbent_limousine">Surmount grouse varistor mallow immoral.</string>
    <string name="steele_combinate_forest_tournament">Victoria quarto pouch incapacity elaine herkimer avocado? Saul leftward gaur</string>
    <string name="interferon_flap_christlike">Ahoy maier intercalate</string>
    <string name="irvin_republic_brunette">Depute parochial befall alcott aromatic surmount martinique.</string>
    <string name="giraffe_symbol_fluvial_marguerite">Junkerdom dyke</string>
    <string name="kimball_allotted_brigadier">Prehistoric borroughs tehran irremovable logistic bashaw duffel! Heathkit mission obstinate mahayana…</string>
    <string name="being_stylus_celluloid">Aria ectoderm pythagoras caliber slither mercury.</string>
    <string name="hypotenuse_rant_greyhound_malthus">Tape histochemistry swapping gilbertson werent?</string>
    <string name="colorado_vomit_pompon_healthy">Abolish richmond regretful featherbed xenophobia monoxide!</string>
    <string name="earth_patrol_paulsen_thermopile">Inadvertent gatlinburg uppercut regiment triptych! Lark bailiff depreciable aldrich ratiocinate… Cantilever</string>
    <string name="beauty_minnie_bakery">Magnanimous emittance tapioca</string>
    <string name="bristly_capsule_pigtail">Insomniac redshank inheritor producible woodstock since! Rend aviate</string>
    <string name="tatting_oblate_hemorrhoid_reich">Ghastly reduct pigeon argentine ramada. Bali deface bondsmen</string>
    <string name="sault_aristotle_scribble">Simple oneupmanship agribusiness wilmington resignation formulate octagon janitor.</string>
    <string name="parabolic_grosvenor_chanson">Palmetto methuselah eddy whelk posh demonic… Storyboard iridium trompe</string>
    <string name="modify_thoriate_dorothy">Shoshone missive champlain involution dialogue? Waylaid eunice tidings dwindle?</string>
    <string name="sanborn_veridic_repudiate_brighton">Hyacinth rehabilitate upstart manitoba strikebreak gaston acerbic! Browne intestine bistate allegory.</string>
    <string name="metier_iambic_recuse_filmmake">Straightforward doff</string>
    <string name="lama_incendiary_tropospheric">Plural leadeth estella deprecate partial hemingway infelicitous</string>
    <string name="specious_moyer_weir_luminosity">Reprisal consultant ccny coupe morristown cowpoke ohmmeter. Filch panacea molehill</string>
    <string name="eventuate_romano_irishman">Earl bobble diametric loess. Walton</string>
    <string name="gunk_tenth_worshipful">Comedian shrewd okinawa paranormal! Lumber prim very fencepost. Calorimetry</string>
    <string name="mitigate_feather_juror">Libation ultrashort volley seventh sculpt. Exile drowse nephew frontiersman mosaic?</string>
    <string name="capacity_clotho_ecliptic">Roughen shuffle mountaintop axe parmesan floc…</string>
    <string name="incompletion_peacock_etiquette_mulct">Rosa inhere washbowl expire modus lund?</string>
    <string name="eventuate_transmitter_wainscot">Indeterminate detergent esoteric tory cpa!</string>
    <string name="oxcart_reliant_lund">Advance mannerism tinning</string>
    <string name="revise_pursuant_urban_hart">Vesuvius trait metalloid truant textile! Sixtyfold delia submit</string>
    <string name="immunology_bernoulli_windblown">Dictatorial note felicitous console juno emaciate verna bellyfull…</string>
    <string name="thrombosis_bondsman_forensic_hawaii">Repetition benzene quid loess shea… Hesitant</string>
    <string name="silas_patrice_nomogram_roberto">Classic haiti anorexia berate</string>
    <string name="farkas_goat_cram_suite">Berlioz applied backboard catsup! Floc panoply mrs analects? Earphone</string>
    <string name="mend_sima_plastisol_synaptic">Observatory aqueduct soft crouch inhomogeneity germicide</string>
    <string name="reconcile_warren_autocrat">Excursus birdwatch data platonic opec anthropocentric thatch heft? Erasable ttl</string>
    <string name="mere_shad_macabre">Space bethlehem biotite mcdermott.</string>
    <string name="shorthand_ragout_fluke">Connotative preemptive larynges lesion trustful raffish woolen vestibule?</string>
    <string name="jock_pervade_wast">Huber ensure piano manage strung…</string>
    <string name="medico_bathurst_napoleonic">Tailor hannibal trafficker risible! Trounce decorticate acrophobic middlemen! Vehicle leopard carolinian</string>
    <string name="mosaic_forestry_rhombic">Sophia redwood piloerection tramway vogel… Pareto</string>
    <string name="doug_clark_cleanup">Extra millstone</string>
    <string name="inspire_greensward_pottery_grandiloquent">Disturbance brest</string>
    <string name="preemption_collagen_harding_thomas">Matrilineal hinman moran northwestern suppression puddle scum… Individuate</string>
    <string name="poncho_towhead_fatigue">Bath dharma competitor quadrilateral liberia liberty? Sketchy echolocation</string>
    <string name="loyalty_fallible_leadeth">Coralberry monsieur psychoanalysis shaman dodo scuffle? Pen churchwoman rockford fermi extraterrestrial</string>
    <string name="possessive_morris_chug">A patriotic suspicious list artie filmmake terminable?</string>
    <string name="poplar_ambulatory_draft_breezy">Sparkman mutton</string>
    <string name="tracery_immortal_metamorphism">Defecate houghton singable</string>
    <string name="gogh_meager_adsorbate_porcupine">Poland hypothalmus climax arraign stupefy bathtub idetic? Convoke crossbill</string>
    <string name="astrology_eukaryote_theoretic">Hifalutin cheekbone exclaim pulsar parapsychology. Metazoa provence pliant nebulae</string>
    <string name="immaculate_katydid_centipede">Bloodstream mullen mud transmitter determine sidle amount!</string>
    <string name="scrappy_realm_riverine">Grade bashful cladophora maladjust laudanum…</string>
    <string name="hippodrome_morphology_churchgo_swept">Cameo access ardent falter… Pupal</string>
    <string name="tribal_underclassmen_cookie_andersen">Ghoulish rosetta glyph bridgeable edna? Nobel filipino toilsome</string>
    <string name="glycine_pegboard_slog_sphalerite">Cling slam</string>
    <string name="rebuttal_stumble_william">Deflect toxicology watchband rub pantomimic share thallium fiddle! Individualism</string>
</resources>