<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<!--
  ~ Copyright (c) 2022 FullDive
  ~  This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_height="match_parent" android:layout_width="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/nessDrapeLayout" android:layout_height="wrap_content" android:layout_width="@dimen/anselm_liggett_padding" app:layout_constraintBottom_toTopOf="@id/licoriceSankLayout" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
        <TextView android:background="@color/counterman_abjure" android:hint="@string/thrombosis_bondsman_forensic_hawaii" android:id="@+id/abjectAxonView" android:layout_height="wrap_content" android:layout_margin="42dp" android:layout_width="@dimen/cauldron_istvan" android:text="@string/giraffe_symbol_fluvial_marguerite" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout android:gravity="center_horizontal" android:id="@+id/licoriceSankLayout" android:layout_height="wrap_content" android:layout_width="@dimen/blow_conifer" android:orientation="vertical" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/nessDrapeLayout">
        <TextView android:background="@color/jure_molal" android:hint="@string/medico_bathurst_napoleonic" android:id="@+id/ploppingView" android:layout_height="wrap_content" android:layout_width="match_parent" android:padding="@dimen/wiseacre_bring_size" android:text="@string/reconcile_warren_autocrat"/>
        <EditText android:background="@color/spatlum_junction" android:hint="@string/loyalty_fallible_leadeth" android:id="@+id/orioleView" android:inputType="textCapCharacters" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/scrappy_realm_riverine" android:textColor="@color/rickets_baltic"/>
        <CheckedTextView android:background="@color/sullivan_diploid_interval" android:hint="@string/oxcart_reliant_lund" android:id="@+id/gobbleView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/hypotenuse_rant_greyhound_malthus"/>
        <EditText android:background="#17AC62D2" android:hint="@string/shorthand_ragout_fluke" android:id="@+id/alexeiView" android:inputType="textPersonName" android:layout_height="wrap_content" android:layout_width="wrap_content" android:padding="@dimen/sabbath_substitute" android:paddingEnd="20dp" android:paddingStart="@dimen/morse_myeline" android:text="@string/silas_patrice_nomogram_roberto" android:textColor="#9EDE6C"/>
        <LinearLayout android:gravity="bottom" android:id="@+id/newelLayout" android:layout_height="wrap_content" android:layout_width="wrap_content" android:orientation="horizontal">
            <EditText android:background="@color/narcissism_rope_mountainside" android:hint="@string/dooley_vulture_tirade_goren" android:id="@+id/teledyneVeronaView" android:inputType="textPassword" android:layout_height="match_parent" android:layout_width="wrap_content" android:text="@string/hippodrome_morphology_churchgo_swept"/>
            <AutoCompleteTextView android:hint="@string/possessive_morris_chug" android:id="@+id/setonMilesView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:paddingEnd="22dp" android:paddingStart="@dimen/import_nodular_width" android:paddingTop="16dp" android:text="@string/tribal_underclassmen_cookie_andersen" android:textColor="@color/collect_anchovy_puffy"/>
            <EditText android:background="@color/turpentine_valine_manufacture" android:hint="@string/metier_iambic_recuse_filmmake" android:id="@+id/disciplinarySurrogateView" android:inputType="textCapWords" android:layout_height="wrap_content" android:layout_width="wrap_content" android:paddingEnd="@dimen/inconspicuous_airflow_margin" android:paddingStart="@dimen/pasadena_defraud_height" android:paddingTop="@dimen/otherworld_canaveral_size" android:text="@string/parabolic_grosvenor_chanson" android:textColor="@color/guilt_golden_extinct" android:textSize="@dimen/antithetic_finnish_textsize"/>
            <CheckedTextView android:background="@color/coalition_witt" android:hint="@string/inspire_greensward_pottery_grandiloquent" android:id="@+id/wristbandRankleView" android:layout_height="wrap_content" android:layout_marginEnd="@dimen/alabaster_melodious_width" android:layout_marginStart="@dimen/strabismus_machiavelli_height" android:layout_marginTop="@dimen/strabismus_machiavelli_height" android:layout_width="wrap_content" android:text="@string/beauty_minnie_bakery" android:textColor="#B5927F1A"/>
            <Button android:background="@color/hopi_advantageous" android:hint="@string/jock_pervade_wast" android:id="@+id/noisyDogbaneView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/gunk_tenth_worshipful" android:textColor="@color/datum_brahmsian"/>
        </LinearLayout>
        <LinearLayout android:gravity="center_horizontal|start" android:id="@+id/weightyPelagicLayout" android:layout_height="wrap_content" android:layout_width="wrap_content" android:orientation="vertical">
            <TextView android:hint="@string/specious_moyer_weir_luminosity" android:id="@+id/iberiaDaccaView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/astrology_eukaryote_theoretic" android:textColor="#F30CFC"/>
        </LinearLayout>
        <AutoCompleteTextView android:background="@color/amperage_entwine_scorch" android:hint="@string/eventuate_transmitter_wainscot" android:id="@+id/semiteTransportView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/preemption_collagen_harding_thomas"/>
        <Button android:background="@color/instructor_heat" android:hint="@string/gorton_eradicable_legate_sphagnum" android:id="@+id/centenarySimaView" android:layout_height="wrap_content" android:layout_marginEnd="42dp" android:layout_marginStart="@dimen/hershel_curd_margin" android:layout_marginTop="@dimen/irreparable_begging" android:layout_width="wrap_content" android:text="@string/bobbing_kipling_diverge" android:textColor="#E87A4E"/>
        <TextView android:background="@color/recursive_shirley" android:hint="@string/feasible_durham_quadrupole_behalf" android:id="@+id/lockheedSkeetView" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/sternum_millisecond_height" android:layout_marginEnd="24dp" android:layout_marginStart="@dimen/elite_greg_height" android:layout_marginTop="@dimen/visigoth_clobber_padding" android:layout_width="wrap_content" android:text="@string/steele_combinate_forest_tournament" android:textColor="@color/isadore_backfill_residuum"/>
        <TextView android:background="#32D582B5" android:hint="@string/doug_clark_cleanup" android:id="@+id/birthrateView" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/agnes_essential_size" android:layout_marginEnd="@dimen/foregoing_jukebox_size" android:layout_marginStart="36dp" android:layout_marginTop="@dimen/snort_sediment_size" android:layout_width="wrap_content" android:padding="@dimen/halvah_libertarian_size" android:text="@string/gogh_meager_adsorbate_porcupine"/>
        <EditText android:background="@color/notre_feedback" android:hint="@string/earth_patrol_paulsen_thermopile" android:id="@+id/funerealRedbirdView" android:inputType="textCapWords" android:layout_height="wrap_content" android:layout_width="match_parent" android:padding="@dimen/digit_identical" android:text="@string/modify_thoriate_dorothy" android:textSize="14sp"/>
        <EditText android:background="@color/prefecture_flagler_cutover" android:hint="@string/rebuttal_stumble_william" android:id="@+id/grantorBeechamView" android:inputType="textCapCharacters" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/immaculate_katydid_centipede" android:textSize="@dimen/pyrotechnic_glut_textsize"/>
        <CheckedTextView android:background="@color/lighten_radish" android:hint="@string/being_stylus_celluloid" android:id="@+id/camerounEvocableView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/interferon_flap_christlike" android:textColor="@color/grapefruit_theoretic"/>
        <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/contributionLayout" android:layout_height="wrap_content" android:layout_width="wrap_content">
            <CheckedTextView android:background="@color/millihenry_tungstate" android:hint="@string/incompletion_peacock_etiquette_mulct" android:id="@+id/tacitusView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/mend_sima_plastisol_synaptic" android:textSize="@dimen/acerbic_gentility_textsize" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView android:background="#FB9836" android:hint="@string/texas_occult_rabin" android:id="@+id/reefDiffuseView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/poncho_towhead_fatigue" android:textColor="@color/emil_floc_lignum"/>
        <CheckBox android:background="@color/malady_caiman" android:hint="@string/poplar_ambulatory_draft_breezy" android:id="@+id/gemstoneView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/nucleoli_transship_camden" android:textColor="#3C222C45"/>
        <TextView android:background="@color/harem_deneb" android:hint="@string/irvin_republic_brunette" android:id="@+id/hughParisView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/tracery_immortal_metamorphism" android:textColor="@color/toronto_commonplace_practice"/>
        <EditText android:background="@color/turpentine_valine_manufacture" android:hint="@string/colorado_vomit_pompon_healthy" android:id="@+id/waffleView" android:inputType="textCapCharacters" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/immunology_bernoulli_windblown" android:textColor="@color/rustic_pavlovian"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
